# src/domain/dtos/update_transaction.dto.go
@@ -1,0 +1,8 @@
+package dtos
+
+type UpdateTransactionDto struct {
+	ID          uint64  `json:"id" validate:"required"`
+	TypeID      uint64  `json:"type_id" validate:""`
+	Amount      float64 `json:"amount" validate:""`
+	Description string  `json:"description" validate:""`
+}
